Add run.sh for lnux TODO: test on AZURE Add MOD_PATH_WSL to test locally on windows linux Detect WSL for loading environ TODO: detect linux for AZURE Missing import in db.py when not running loclly

--- a/tests/.coveragerc
+++ b/tests/.coveragerc
@@ -13,6 +13,8 @@ omit =
     ../unhcr/utils.py
     ../unhcr/leonics_backfill.py
     ../setup.py
+    ../update_all.py
+    ../gb_serial_nums.py
 
 
 [coverage:report]
