--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,8 @@ openpyxl==3.1.5
 packaging==24.2
 pandas==2.2.3
 pluggy==1.5.0
-psycopg2==2.9.10
+#psycopg2==2.9.10
+psycopg2-binary
 pytest==8.3.4
 pytest-cov==6.0.0
 python-dateutil==2.9.0.post0
