--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ botocore==1.35.94
 certifi==2024.12.14
 charset-normalizer==3.4.1
 colorama==0.4.6
+deepdiff==8.2.0
 et_xmlfile==2.0.0
 fuzzywuzzy==0.18.0
 greenlet==3.1.1
