--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,13 @@ __pycache__/
 .venvl/
 venvl/
 vfedot/
+
+# Ignore .log files
+*.log
+
+# Ignore Python-related files and directories
+Python-3.11.8/
+Python-3.11.8.tgz
+
+# Ignore NUL file (if it is not needed)
+NUL
